[package]
name = "rustopviewer"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "RustOp Viewer (ROV): a Windows-first Rust remote desktop viewer/controller optimized for iPhone access over Tailscale."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mmdmcy/rustopviewer"
homepage = "https://github.com/mmdmcy/rustopviewer"
documentation = "https://github.com/mmdmcy/rustopviewer"
keywords = ["remote-desktop", "windows", "iphone", "tailscale", "rust"]
categories = ["gui", "network-programming"]

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["json"] }
directories = "6.0.0"
eframe = "0.34.1"
egui = "0.34.1"
enigo = "0.6.1"
if-addrs = "0.15.0"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
parking_lot = "0.12.5"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
xcap = { version = "0.9.3", features = ["image"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"
