[package]
name = "rustopviewer"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "RustOp Viewer (ROV): a Rust remote desktop viewer/controller for Linux and Windows hosts with browser-based clients."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mmdmcy/rustopviewer"
homepage = "https://github.com/mmdmcy/rustopviewer"
documentation = "https://github.com/mmdmcy/rustopviewer"
keywords = ["remote-desktop", "browser", "linux", "windows", "tui"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["form", "json"] }
crossterm = "0.28.1"
directories = "6.0.0"
enigo = "0.6.1"
if-addrs = "0.15.0"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
parking_lot = "0.12.5"
rand = "0.9.2"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
xcap = { version = "0.9.3", features = ["image"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.177"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"
